After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744652 - jaw_object_get_name doesn't always get name
jaw_object_get_name doesn't always get name
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-02-17 11:48 UTC by Magdalen Berns (irc magpie)
Modified: 2015-02-27 16:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (2.64 KB, patch)
2015-02-17 11:53 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-02-17 11:48:24 UTC
At the moment jaw_object_get_name gets the name of the object under certain conditions meaning that if those conditions are not met the call returns NULL.
Comment 1 Magdalen Berns (irc magpie) 2015-02-17 11:53:46 UTC
Created attachment 297014 [details] [review]
Patch to address problem
Comment 3 André Klapper 2015-02-27 16:58:58 UTC
[Moving at-spi/java-atk-wrapper bugs to separate product. See bug 740075]