JNI: get name before checking for COMBO BOX

jaw_object_get_name was only getting the name of the object
under certain conditions so if those conditions are not met
the call to jaw_object_get_name would return NULL. Getting
the name before checking for the name of COMBO box child
object means the name will not return NULL in more situations

 Bug: https://bugzilla.gnome.org/show_bug.cgi?id=744652